--- a/index.html
+++ b/index.html
@@ -37,25 +37,39 @@
             <p id="price-one">Price: 1699.99</p>
             <p id="weight-one">Weight: 762</p>
             <img id="image-one" src="assets/battleShip.jpg" alt="battleship-anchor" />
+            <button type="button" name="Add-to-Cart1"> Add to Cart</button>
           </section>
           <section>
             <p id="name-two">Name: Oceans Gem</p>
             <p id="price-two">Price: 450.99</p>
             <p id="weight-two">Weight: 120</p>
             <img id="image-two" src="assets/blueOcean.jpg" alt="blue-ocean-anchor" />
+            <button type="button" name="Add-to-Cart2"> Add to Cart</button>
           </section>
           <section>
             <p id="name-three">Name: The Grappler </p>
             <p id="price-three">Price: 29.99</p>
             <p id="weight-three">Weight: 55</p>
             <img id="image-three" src="assets/theGrapplingHook.jpg" alt="grappler-image" />
+            <button type="button" name="Add-to-Cart3"> Add to Cart</button>
           </section>
           <section>
             <p id="name-four">Name: Black Pearl</p>
             <p id="price-four">Price: 75.99</p>
             <p id="weight-four">Weight: 45</p>
             <img id="image-four" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <button type="button" name="Add-to-Cart4"> Add to Cart</button>
           </section>
+
+          <h3></h3>
+          <article class="cart">
+            <h3>Cart</h3>
+            <p>Remove All</p>
+
+
+
+          </article>
+
           <button type="submit">Continue to Payment</button>
         </form>
       </main>
