Add Space for all items that can be bought

--- a/index.html
+++ b/index.html
@@ -61,6 +61,70 @@
             <button type="button" name="Add-to-Cart4"> Add to Cart</button>
           </section>
 
+
+
+          <section>
+            <p id="name-five">Name: Black Pearl</p>
+            <p id="price-five">Price: 75.99</p>
+            <p id="weight-five">Weight: 45</p>
+            <img id="image-five" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <button type="button" name="Add-to-Cart-five"> Add to Cart</button>
+          </section>
+          <section>
+            <p id="name-six">Name: Black Pearl</p>
+            <p id="price-six">Price: 75.99</p>
+            <p id="weight-six">Weight: 45</p>
+            <img id="image-six" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <button type="button" name="Add-to-Cart-six"> Add to Cart</button>
+          </section>
+          <section>
+            <p id="name-seven">Name: Black Pearl</p>
+            <p id="price-seven">Price: 75.99</p>
+            <p id="weight-seven">Weight: 45</p>
+            <img id="image-seven" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <button type="button" name="Add-to-Cart-seven"> Add to Cart</button>
+          </section>
+          <section>
+            <p id="name-eight">Name: Black Pearl</p>
+            <p id="price-eight">Price: 75.99</p>
+            <p id="weight-eight">Weight: 45</p>
+            <img id="image-eight" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <button type="button" name="Add-to-Cart-eight"> Add to Cart</button>
+          </section>
+          <section>
+            <p id="name-nine">Name: Black Pearl</p>
+            <p id="price-nine">Price: 75.99</p>
+            <p id="weight-nine">Weight: 45</p>
+            <img id="image-nine" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <button type="button" name="Add-to-Cart-nine"> Add to Cart</button>
+          </section>
+          <section>
+            <p id="name-ten">Name: Black Pearl</p>
+            <p id="price-ten">Price: 75.99</p>
+            <p id="weight-ten">Weight: 45</p>
+            <img id="image-ten" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <button type="button" name="Add-to-Cart-ten"> Add to Cart</button>
+          </section>
+          <section>
+            <p id="name-eleven">Name: Black Pearl</p>
+            <p id="price-eleven">Price: 75.99</p>
+            <p id="weight-eleven">Weight: 45</p>
+            <img id="image-eleven" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <button type="button" name="Add-to-Cart-eleven"> Add to Cart</button>
+          </section>
+          <section>
+            <p id="name-twelve">Name: Black Pearl</p>
+            <p id="price-twelve">Price: 75.99</p>
+            <p id="weight-twelve">Weight: 45</p>
+            <img id="image-twelve" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <button type="button" name="Add-to-Cart-twelve"> Add to Cart</button>
+          </section>
+
+
+
+
+
+
           <h3></h3>
           <article class="cart">
             <h3>Cart</h3>
@@ -163,9 +227,6 @@
               <p>1</p>
               <button type="button" name="sub-twelve">-</button>
             </section>
-
-
-
           </article>
 
           <button type="submit">Continue to Payment</button>
