--- a/index.html
+++ b/index.html
@@ -64,59 +64,59 @@
 
 
           <section>
-            <p id="name-five">Name: Black Pearl</p>
-            <p id="price-five">Price: 75.99</p>
-            <p id="weight-five">Weight: 45</p>
-            <img id="image-five" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <p id="name-five">Name: Four Pronged Glory</p>
+            <p id="price-five">Price: $45.99</p>
+            <p id="weight-five">Weight: 87</p>
+            <img id="image-five" src="assets/4Prong.jpg" alt="Four-Prong-image" />
             <button type="button" name="Add-to-Cart-five"> Add to Cart</button>
           </section>
           <section>
-            <p id="name-six">Name: Black Pearl</p>
-            <p id="price-six">Price: 75.99</p>
-            <p id="weight-six">Weight: 45</p>
-            <img id="image-six" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <p id="name-six">Name: Modern</p>
+            <p id="price-six">Price: $49.99</p>
+            <p id="weight-six">Weight: 35</p>
+            <img id="image-six" src="assets/modern.jpg" alt="modern-image" />
             <button type="button" name="Add-to-Cart-six"> Add to Cart</button>
           </section>
           <section>
-            <p id="name-seven">Name: Black Pearl</p>
-            <p id="price-seven">Price: 75.99</p>
-            <p id="weight-seven">Weight: 45</p>
-            <img id="image-seven" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <p id="name-seven">Name: Pirates Treasure</p>
+            <p id="price-seven">Price: $12,000</p>
+            <p id="weight-seven">Weight: 12</p>
+            <img id="image-seven" src="assets/PiratesBounty.jpeg" alt="pirates-treasure-image" />
             <button type="button" name="Add-to-Cart-seven"> Add to Cart</button>
           </section>
           <section>
-            <p id="name-eight">Name: Black Pearl</p>
-            <p id="price-eight">Price: 75.99</p>
-            <p id="weight-eight">Weight: 45</p>
-            <img id="image-eight" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <p id="name-eight">Name: Rusted Beauty</p>
+            <p id="price-eight">Price: $9.99</p>
+            <p id="weight-eight">Weight: 63</p>
+            <img id="image-eight" src="assets/rustedBeauty.jpg" alt="rusted-beauty-image" />
             <button type="button" name="Add-to-Cart-eight"> Add to Cart</button>
           </section>
           <section>
-            <p id="name-nine">Name: Black Pearl</p>
-            <p id="price-nine">Price: 75.99</p>
-            <p id="weight-nine">Weight: 45</p>
-            <img id="image-nine" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <p id="name-nine">Name: The Spoon</p>
+            <p id="price-nine">Price: $43.99</p>
+            <p id="weight-nine">Weight: 88</p>
+            <img id="image-nine" src="assets/theSpoon.jpg" alt="spoon-image" />
             <button type="button" name="Add-to-Cart-nine"> Add to Cart</button>
           </section>
           <section>
-            <p id="name-ten">Name: Black Pearl</p>
-            <p id="price-ten">Price: 75.99</p>
+            <p id="name-ten">Name: Wooden Master</p>
+            <p id="price-ten">Price: $7.99</p>
             <p id="weight-ten">Weight: 45</p>
-            <img id="image-ten" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <img id="image-ten" src="assets/woodenMaster.jpg" alt="wooden-master-image" />
             <button type="button" name="Add-to-Cart-ten"> Add to Cart</button>
           </section>
           <section>
-            <p id="name-eleven">Name: Black Pearl</p>
-            <p id="price-eleven">Price: 75.99</p>
-            <p id="weight-eleven">Weight: 45</p>
-            <img id="image-eleven" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <p id="name-eleven">Name: Golden Modern</p>
+            <p id="price-eleven">Price: $15,000</p>
+            <p id="weight-eleven">Weight: 360</p>
+            <img id="image-eleven" src="assets/golden-modern.png" alt="golden-modern-image" />
             <button type="button" name="Add-to-Cart-eleven"> Add to Cart</button>
           </section>
           <section>
-            <p id="name-twelve">Name: Black Pearl</p>
-            <p id="price-twelve">Price: 75.99</p>
-            <p id="weight-twelve">Weight: 45</p>
-            <img id="image-twelve" src="assets/blackPearl.jpg" alt="black-pearl-image" />
+            <p id="name-twelve">Name: Almost and Anchor</p>
+            <p id="price-twelve">Price: $5.00</p>
+            <p id="weight-twelve">Weight: 3</p>
+            <img id="image-twelve" src="assets/almost-an-anchor.jpg" alt="almost-an-anchor-image" />
             <button type="button" name="Add-to-Cart-twelve"> Add to Cart</button>
           </section>
 
