Make dollar signs consistant

--- a/index.html
+++ b/index.html
@@ -34,35 +34,32 @@
           <h2>Cart</h2>
           <section>
             <p id="name-one">Name: Built for a Battleship</p>
-            <p id="price-one">Price: 1699.99</p>
+            <p id="price-one">Price: $1699.99</p>
             <p id="weight-one">Weight: 762</p>
             <img id="image-one" src="assets/battleShip.jpg" alt="battleship-anchor" />
             <button type="button" name="Add-to-Cart-one"> Add to Cart</button>
           </section>
           <section>
             <p id="name-two">Name: Oceans Gem</p>
-            <p id="price-two">Price: 450.99</p>
+            <p id="price-two">Price: $450.99</p>
             <p id="weight-two">Weight: 120</p>
             <img id="image-two" src="assets/blueOcean.jpg" alt="blue-ocean-anchor" />
             <button type="button" name="Add-to-Cart-two"> Add to Cart</button>
           </section>
           <section>
             <p id="name-three">Name: The Grappler </p>
-            <p id="price-three">Price: 29.99</p>
+            <p id="price-three">Price: $29.99</p>
             <p id="weight-three">Weight: 55</p>
             <img id="image-three" src="assets/theGrapplingHook.jpg" alt="grappler-image" />
             <button type="button" name="Add-to-Cart-three"> Add to Cart</button>
           </section>
           <section>
             <p id="name-four">Name: Black Pearl</p>
-            <p id="price-four">Price: 75.99</p>
+            <p id="price-four">Price: $75.99</p>
             <p id="weight-four">Weight: 45</p>
             <img id="image-four" src="assets/blackPearl.jpg" alt="black-pearl-image" />
             <button type="button" name="Add-to-Cart-four"> Add to Cart</button>
           </section>
-
-
-
           <section>
             <p id="name-five">Name: Four Pronged Glory</p>
             <p id="price-five">Price: $45.99</p>
@@ -119,12 +116,6 @@
             <img id="image-twelve" src="assets/almost-an-anchor.jpg" alt="almost-an-anchor-image" />
             <button type="button" name="Add-to-Cart-twelve"> Add to Cart</button>
           </section>
-
-
-
-
-
-
           <h3></h3>
           <article class="cart">
             <h3>Cart</h3>
@@ -136,8 +127,6 @@
               <button type="button" name="add-one">+</button>
               <p>1</p>
               <button type="button" name="sub-one">-</button>
-
-
             </section>
             <section>
               <p id="cart-name-two"></p>
@@ -228,7 +217,6 @@
               <button type="button" name="sub-twelve">-</button>
             </section>
           </article>
-
           <button type="submit">Continue to Payment</button>
         </form>
       </main>
