Create inital JS for cart

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p id="price-one">Price: $1699.99</p>
             <p id="weight-one">Weight: 762</p>
             <img id="image-one" src="assets/battleShip.jpg" alt="battleship-anchor" />
-            <button type="button" name="Add-to-Cart-one"> Add to Cart</button>
+            <button id="Add-to-Cart-one" type="button" name="Add-to-Cart-one"> Add to Cart</button>
           </section>
           <section>
             <p id="name-two">Name: Oceans Gem</p>
@@ -124,41 +124,31 @@
               <p id="cart-name-one"></p>
               <p id="cart-price-one"></p>
               <img id="cart-image-one" src="" alt="">
-              <button type="button" name="add-one">+</button>
-              <p>1</p>
-              <button type="button" name="sub-one">-</button>
+
             </section>
             <section>
               <p id="cart-name-two"></p>
               <p id="cart-price-two"></p>
               <img id="cart-image-two" src="" alt="">
-              <button type="button" name="add-two">+</button>
-              <p>1</p>
-              <button type="button" name="sub-two">-</button>
+
             </section>
             <section>
               <p id="cart-name-three"></p>
               <p id="cart-price-three"></p>
               <img id="cart-image-three" src="" alt="">
-              <button type="button" name="add-three">+</button>
-              <p>1</p>
-              <button type="button" name="sub-three">-</button>
+
             </section>
             <section>
               <p id="cart-name-four"></p>
               <p id="cart-price-four"></p>
               <img id="cart-image-four" src="" alt="">
-              <button type="button" name="add-four">+</button>
-              <p>1</p>
-              <button type="button" name="sub-four">-</button>
+
             </section>
             <section>
               <p id="cart-name-five"></p>
               <p id="cart-price-five"></p>
               <img id="cart-image-five" src="" alt="">
-              <button type="button" name="add-five">+</button>
-              <p>1</p>
-              <button type="button" name="sub-five">-</button>
+
             </section>
             <section>
               <p id="cart-name-six"></p>
