Create alpha version of cart array with local storge

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <button type="button" name="Add-to-Cart-eleven"> Add to Cart</button>
           </section>
           <section>
-            <p id="name-twelve">Name: Almost and Anchor</p>
+            <p id="name-twelve">Name: Almost an Anchor</p>
             <p id="price-twelve">Price: $5.00</p>
             <p id="weight-twelve">Weight: 3</p>
             <img id="image-twelve" src="assets/almost-an-anchor.jpg" alt="almost-an-anchor-image" />
