--- a/index.html
+++ b/index.html
@@ -44,83 +44,86 @@
             <p id="price-two">Price: $450.99</p>
             <p id="weight-two">Weight: 120</p>
             <img id="image-two" src="assets/blueOcean.jpg" alt="blue-ocean-anchor" />
-            <button type="button" name="Add-to-Cart-two"> Add to Cart</button>
+            <button id="Add-to-Cart-two" type="button" name="Add-to-Cart-two"> Add to Cart</button>
           </section>
           <section>
             <p id="name-three">Name: The Grappler </p>
             <p id="price-three">Price: $29.99</p>
             <p id="weight-three">Weight: 55</p>
             <img id="image-three" src="assets/theGrapplingHook.jpg" alt="grappler-image" />
-            <button type="button" name="Add-to-Cart-three"> Add to Cart</button>
+            <button id="Add-to-Cart-three" type="button" name="Add-to-Cart-three"> Add to Cart</button>
           </section>
           <section>
             <p id="name-four">Name: Black Pearl</p>
             <p id="price-four">Price: $75.99</p>
             <p id="weight-four">Weight: 45</p>
             <img id="image-four" src="assets/blackPearl.jpg" alt="black-pearl-image" />
-            <button type="button" name="Add-to-Cart-four"> Add to Cart</button>
+            <button id="Add-to-Cart-four" type="button" name="Add-to-Cart-four"> Add to Cart</button>
           </section>
           <section>
             <p id="name-five">Name: Four Pronged Glory</p>
             <p id="price-five">Price: $45.99</p>
             <p id="weight-five">Weight: 87</p>
             <img id="image-five" src="assets/4Prong.jpg" alt="Four-Prong-image" />
-            <button type="button" name="Add-to-Cart-five"> Add to Cart</button>
+            <button id="Add-to-Cart-five" type="button" name="Add-to-Cart-five"> Add to Cart</button>
           </section>
           <section>
             <p id="name-six">Name: Modern</p>
             <p id="price-six">Price: $49.99</p>
             <p id="weight-six">Weight: 35</p>
             <img id="image-six" src="assets/modern.jpg" alt="modern-image" />
-            <button type="button" name="Add-to-Cart-six"> Add to Cart</button>
+            <button id="Add-to-Cart-six" type="button" name="Add-to-Cart-six"> Add to Cart</button>
           </section>
           <section>
             <p id="name-seven">Name: Pirates Treasure</p>
             <p id="price-seven">Price: $12,000</p>
             <p id="weight-seven">Weight: 12</p>
             <img id="image-seven" src="assets/PiratesBounty.jpeg" alt="pirates-treasure-image" />
-            <button type="button" name="Add-to-Cart-seven"> Add to Cart</button>
+            <button id="Add-to-Cart-seven" type="button" name="Add-to-Cart-seven"> Add to Cart</button>
           </section>
           <section>
             <p id="name-eight">Name: Rusted Beauty</p>
             <p id="price-eight">Price: $9.99</p>
             <p id="weight-eight">Weight: 63</p>
             <img id="image-eight" src="assets/rustedBeauty.jpg" alt="rusted-beauty-image" />
-            <button type="button" name="Add-to-Cart-eight"> Add to Cart</button>
+            <button id="Add-to-Cart-eight" type="button" name="Add-to-Cart-eight"> Add to Cart</button>
           </section>
           <section>
             <p id="name-nine">Name: The Spoon</p>
             <p id="price-nine">Price: $43.99</p>
             <p id="weight-nine">Weight: 88</p>
             <img id="image-nine" src="assets/theSpoon.jpg" alt="spoon-image" />
-            <button type="button" name="Add-to-Cart-nine"> Add to Cart</button>
+            <button id="Add-to-Cart-nine" type="button" name="Add-to-Cart-nine"> Add to Cart</button>
           </section>
           <section>
             <p id="name-ten">Name: Wooden Master</p>
             <p id="price-ten">Price: $7.99</p>
             <p id="weight-ten">Weight: 45</p>
             <img id="image-ten" src="assets/woodenMaster.jpg" alt="wooden-master-image" />
-            <button type="button" name="Add-to-Cart-ten"> Add to Cart</button>
+            <button id="Add-to-Cart-ten" type="button" name="Add-to-Cart-ten"> Add to Cart</button>
           </section>
           <section>
             <p id="name-eleven">Name: Golden Modern</p>
             <p id="price-eleven">Price: $15,000</p>
             <p id="weight-eleven">Weight: 360</p>
             <img id="image-eleven" src="assets/golden-modern.png" alt="golden-modern-image" />
-            <button type="button" name="Add-to-Cart-eleven"> Add to Cart</button>
+            <button id="Add-to-Cart-eleven" type="button" name="Add-to-Cart-eleven"> Add to Cart</button>
           </section>
           <section>
             <p id="name-twelve">Name: Almost an Anchor</p>
             <p id="price-twelve">Price: $5.00</p>
             <p id="weight-twelve">Weight: 3</p>
             <img id="image-twelve" src="assets/almost-an-anchor.jpg" alt="almost-an-anchor-image" />
-            <button type="button" name="Add-to-Cart-twelve"> Add to Cart</button>
+            <button id="Add-to-Cart-twelve" type="button" name="Add-to-Cart-twelve"> Add to Cart</button>
           </section>
           <h3></h3>
           <article class="cart">
             <h3>Cart</h3>
             <p>Remove All</p>
             <section>
+
+
+
               <p id="cart-name-one"></p>
               <p id="cart-price-one"></p>
               <img id="cart-image-one" src="" alt="">
