Made cart more functional by using a single string

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <p>Remove All</p>
             <section>
 
-
+              <p id="cart-start"></p>
 
               <p id="cart-name-one"></p>
               <p id="cart-price-one"></p>
