--- a/shipping/index.html
+++ b/shipping/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
-      <title>Aidan's Anchors For All'</title>
+      <title>Anchorage Anchors Anchorporating</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
       <link rel="stylesheet" href="../style.css" />
@@ -11,7 +11,7 @@
     </head>
     <body>
       <header id="site-header">
-        <h1>Aidan's Anchors For All'</h1>
+        <h1>Anchorage Anchors Anchorporating</h1>
             <nav id="site-nav">
               <ul>
                 <li>
@@ -75,7 +75,7 @@
             </form>
           </main>
         <footer id="footer">
-          <p>Site content for Aidan's Anchors for All'</p>
+          <p>Site content for Anchorage Anchors Anchorporating</p>
         </footer>
           <script src="../main.js"></script>
       </body>
