--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </header>
       <main id="content">
         <form name="post" action="payment/" method="get" aria-live="polite" aria-relevant="additions">
-          <h2>Cart</h2>
+          <h2>Inventory</h2>
           <section>
             <p id="name-one">Name: Built for a Battleship</p>
             <p id="price-one">Price: $1699.99</p>
@@ -118,8 +118,8 @@
           </section>
           <h3></h3>
           <article class="cart">
-            <h3>Cart</h3>
-            <p>Remove All</p>
+            <h2>Cart</h2>
+            <button type="button" name="removeall">Remove All</button>
             <section>
               <p id="cart-start"></p>
             </section>
