--- a/index.html
+++ b/index.html
@@ -122,6 +122,26 @@
             <button type="button" name="removeall">Remove All</button>
             <section>
               <p id="cart-start"></p>
+              <ul>
+                <li id="c1">One</li>
+                <li id="c2">Two</li>
+                <li id="c3">Three</li>
+                <li id="c4"></li>
+                <li id="c5"></li>
+                <li id="c6"></li>
+                <li id="c7"></li>
+                <li id="c8"></li>
+                <li id="c9"></li>
+                <li id="c10"></li>
+                <li id="c11"></li>
+                <li id="c12"></li>
+                <li id="c13"></li>
+                <li id="c14"></li>
+                <li id="c15"></li>
+                <li id="c16"></li>
+
+
+              </ul>
             </section>
           </article>
           <button type="submit">Continue to Payment</button>
