Modify cart placement and titles

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
           </ul>
         </nav>
       </header>
+      <section id="titles">
+        <h2>Inventory</h2>
+        <h2>Cart</h2>
+      </section>
       <main id="content">
         <form name="post" action="payment/" method="get" aria-live="polite" aria-relevant="additions">
-          <h2>Inventory</h2>
           <section>
             <p id="name-one">Name: Built for a Battleship</p>
             <p id="price-one">Price: $1699.99</p>
@@ -128,34 +131,31 @@
             <button id="Add-to-Cart-twelve" type="button" name="Add-to-Cart-twelve"> Add to Cart</button>
             <p id="proof-twelve"></p>
           </section>
-          <h3></h3>
+        </form>
+        <section id="cart">
+          <ul>
+            <li id="c0"></li>
+            <li id="c1"></li>
+            <li id="c2"></li>
+            <li id="c3"></li>
+            <li id="c4"></li>
+            <li id="c5"></li>
+            <li id="c6"></li>
+            <li id="c7"></li>
+            <li id="c8"></li>
+            <li id="c9"></li>
+            <li id="c10"></li>
+            <li id="c11"></li>
+            <li id="c12"></li>
+            <li id="c13"></li>
+            <li id="c14"></li>
+            <li id="c15"></li>
+          </ul>
           <article class="cart">
-            <h2>Cart</h2>
             <button type="button" name="removeall">Remove All</button>
-            <section>
-              <p id="cart-start"></p>
-              <ul>
-                <li id="c0"></li>
-                <li id="c1"></li>
-                <li id="c2"></li>
-                <li id="c3"></li>
-                <li id="c4"></li>
-                <li id="c5"></li>
-                <li id="c6"></li>
-                <li id="c7"></li>
-                <li id="c8"></li>
-                <li id="c9"></li>
-                <li id="c10"></li>
-                <li id="c11"></li>
-                <li id="c12"></li>
-                <li id="c13"></li>
-                <li id="c14"></li>
-                <li id="c15"></li>
-              </ul>
-            </section>
           </article>
           <button type="submit">Continue to Payment</button>
-        </form>
+        </section>
       </main>
       <footer id="footer">
         <p>Site content for Anchorage Anchors Anchorporating</p>
