Add id cart-items

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
           </section>
         </form>
         <section id="cart">
-          <ul>
+          <button type="submit">Continue to Payment</button>
+          <ul id="cart-items">
             <li id="c0"></li>
             <li id="c1"></li>
             <li id="c2"></li>
@@ -154,7 +155,6 @@
           <article class="cart">
             <button type="button" name="removeall">Remove All</button>
           </article>
-          <button type="submit">Continue to Payment</button>
         </section>
       </main>
       <footer id="footer">
