Add Backstop and start testing

--- a/review/index.html
+++ b/review/index.html
@@ -65,7 +65,7 @@
             <p id="name-five">Name: Four Pronged Glory</p>
             <p id="price-five">Price: $45.99</p>
             <p id="weight-five">Weight: 87</p>
-            <img id="image-five" src="assets/4Prong.jpg" alt="Four-Prong-image" />
+            <img id="image-five" src="assets/review/4Prong.jpg" alt="Four-Prong-image" />
           </section>
           <section>
             <p id="name-six">Name: Modern</p>
