Change input types to text

--- a/payment/index.html
+++ b/payment/index.html
@@ -41,7 +41,7 @@
                   </li>
                   <li>
                     <label for="card-number">Card Number</label>
-                    <input type="number" name="card-number" id="card-number" />
+                    <input type="text" name="card-number" id="card-number" />
                   </li>
                   <li>
                     <label for="name-on-card">Name on Card</label>
@@ -61,7 +61,7 @@
                   </li>
                   <li>
                     <label for="sec-code">Security Code</label>
-                    <input type="number" name="sec-code" id="sec-code" />
+                    <input type="text" name="sec-code" id="sec-code" />
                   </li>
                 </ul>
               </section>
