Inital local storage for shipping works

--- a/review/index.html
+++ b/review/index.html
@@ -58,12 +58,12 @@
         </section>
         <h3>Shipping Address</h3>
         <section>
-          <p>
+          <p id="ship">
           </p>
         </section>
         <h3>Payment Method</h3>
         <section>
-          <p>
+          <p id="pay">
           </p>
         </section>
       </main>
