--- a/shipping/index.html
+++ b/shipping/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html lang="en" id="shipping-page">
     <head>
       <title>Anchorage Anchors Anchorporating</title>
       <meta charset="utf-8" />
@@ -68,7 +68,7 @@
                   </li>
                 </ul>
               </section>
-              <button type="submit">Save and Continue to Review</button>
+              <button id="cont" type="submit">Save and Continue to Review</button>
             </form>
           </main>
           <form action="../payment/">
