Use local storage to display payment and shipping on review page

--- a/payment/index.html
+++ b/payment/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html lang="en" id="payment-page">
     <head>
-
       <title>Anchorage Anchors Anchorporating</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
@@ -65,7 +64,7 @@
                   </li>
                 </ul>
               </section>
-              <button type="submit">Save and Continue to Shipping</button>
+              <button id="cont" type="submit">Save and Continue to Shipping</button>
             </form>
         </main>
         <form action="../">
