Mostly finish total function

--- a/review/index.html
+++ b/review/index.html
@@ -55,11 +55,11 @@
             <li id="c14"></li>
             <li id="c15"></li>
           </ul>
+          <p id="total"></p>
         </section>
         <h3>Shipping Address</h3>
         <section>
-          <p id="ship">
-          </p>
+          <p id="ship"></p>
         </section>
         <h3>Payment Method</h3>
         <section>
