--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
             <button id="Add-to-Cart-twelve" type="button" name="Add-to-Cart-twelve"> Add to Cart</button>
             <p id="proof-twelve"></p>
           </section>
+          <button id="cont" type="submit">Continue to Payment</button>
         </form>
         <section id="cart">
-          <button type="submit">Continue to Payment</button>
           <ul id="cart-items">
             <li id="c0"></li>
             <button id="r0" type="button" name="Remove"> Remove</button>
