Add Tax collection

--- a/review/index.html
+++ b/review/index.html
@@ -55,6 +55,7 @@
             <li id="c14"></li>
             <li id="c15"></li>
           </ul>
+          <p id="tax"></p>
           <p id="total"></p>
         </section>
         <h3>Shipping Address</h3>
