Lint and validate all HTML files

--- a/review/index.html
+++ b/review/index.html
@@ -34,7 +34,7 @@
         </nav>
       </header>
       <h2>Review and Confirm</h2>
-      <main id="review-page">
+      <main id="review-page-main">
         <h3>Cart</h3>
         <section id="cart-confirm">
           <ul id="cart-items">
