Change name of button

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <button id="Add-to-Cart-twelve" type="button" name="Add-to-Cart-twelve"> Add to Cart</button>
             <p id="proof-twelve"></p>
           </section>
-          <button id="cont" type="submit">Continue to Payment</button>
+          <button id="cont" type="submit">Save and Continue to Payment</button>
         </form>
         <section id="cart">
           <ul id="cart-items">
