Add content to confirm order page

--- a/confirm/index.html
+++ b/confirm/index.html
@@ -27,3 +27,8 @@
         </ul>
       </nav>
     </header>
+    <main id="content">
+      <h2>Your Order has been confirmed!</h2>
+      <p>You will receive an email confirmation, with your estimated delivery time. Thank you for
+      shopping with Anchorage Anchors!</p>
+    </main>
