Add submit button for review page

--- a/review/index.html
+++ b/review/index.html
@@ -2,7 +2,7 @@
 <!--Note 1: I want to make smaller images of current ones available and use them for the review pages-->
 <!--Note 2: I want to make the payment and shipping on the side in desktop mode, and scroll works fine for mobile -->
 <!--Note 3: Is  it just me or is h3 too small? Will either change it myself or ask someone to do that later-->
-<!--Note 4: Make a confirm order page later-->
+<!--Note 4: Make a confirm order page later (Done)-->
 
   <html lang="en" id = "review-page">
     <head>
@@ -67,6 +67,9 @@
           <p id="pay">
           </p>
         </section>
+        <form action="../confirm">
+          <button type="submit">Confirm Order</button>
+        </form>
       </main>
       <footer id="footer">
         <p>Site content for Anchorage Anchors Anchorporating</p>
