Add footer to confirm page

--- a/confirm/index.html
+++ b/confirm/index.html
@@ -32,3 +32,9 @@
       <p>You will receive an email confirmation, with your estimated delivery time. Thank you for
       shopping with Anchorage Anchors!</p>
     </main>
+    <footer id="footer">
+      <p>Site content for Anchorage Anchors Anchorporating</p>
+    </footer>
+  <script src="../main.js"></script>
+  </body>
+</html>
